NRP-1469 fixes bug, map not showing in Firefox

--- a/styles/map.css
+++ b/styles/map.css
@@ -1,4 +1,3 @@
 .leaflet-map {
-   height: calc(100% - 68px);
-   height: -moz-calc(98vh - 68px);
+   height: calc(98vh - 68px);
 }
